--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,42 @@
-<p>
-  home works!
-</p>
+
+  <div class="container">
+  <table class="table">
+
+  <thead>
+    <tr>
+      <div class="row">
+        <div class="col-3">
+          <th scope="col">Edificio</th>
+        </div>
+        <div class="col-3">
+          <th scope="col">Salon</th>
+        </div>
+        <div class="col-3">
+          <th scope="col">Dia</th>
+        </div>
+        <div class="col-3">
+          <th scope="col">Hora</th>
+        </div>
+
+      </div>
+
+    </tr>
+  </thead>
+  <tbody > <!--asi se concatenaria un for -->
+
+      <div class="row ">
+        <div class="col-3">
+          <tr *ngFor="let edici of edificios;">
+            <button  (click)="obtenersalonesEdificio( edici.key )" type="button" class="btn btn-secondary">{{edici.key}}</button>
+          </tr>
+        </div>
+        <div class="col-3">
+          <tr *ngFor="let item of aulas">
+
+              <button  (click)="obtenerDias( item.key )" type="button" class="btn btn-secondary">{{item.key}}</button>
+          </tr>
+        </div>
+      </div>
+  </tbody>
+</table>
+</div>
