--- a/src/app/components/salon/salon.component.html
+++ b/src/app/components/salon/salon.component.html
@@ -25,12 +25,21 @@
 
     <div class="row ">
       <div class="col-3">
-        <tr *ngFor="let edici of todoEdificio;">
+        <tr *ngFor="let edici of edificios;">
           <button  (click)="obtenersalonesEdificio( edici.key )" type="button" class="btn btn-secondary">{{edici.key}}</button>
         </tr>
       </div>
       <div class="col-3">
+        <tr *ngFor="let item of aulas">
 
+            <button  (click)="obtenerDias( item.key )" type="button" class="btn btn-secondary">{{item.key}}</button>
+        </tr>
+      </div>
+      <div class="col-3">
+        <tr *ngFor="let item of dias">
+
+            <button  (click)="obtenerHoras( item.key )" type="button" class="btn btn-secondary">{{item.key}}</button>
+        </tr>
       </div>
     </div>
 </tbody>
