--- a/src/app/components/horarios/horarios.component.html
+++ b/src/app/components/horarios/horarios.component.html
@@ -4,19 +4,21 @@
 <thead>
   <tr>
     <div class="row">
-      <div class="col-3">
+      <div class="col-2">
         <th scope="col">Edificio</th>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <th scope="col">Salon</th>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <th scope="col">Dia</th>
       </div>
-      <div class="col-3">
+      <div class="col-2">
         <th scope="col">Hora</th>
       </div>
-
+      <div class="col-2">
+        <th scope="col">Clases</th>
+      </div>
     </div>
 
   </tr>
