--- a/src/app/components/editar-clase/editar-clase.component.html
+++ b/src/app/components/editar-clase/editar-clase.component.html
@@ -3,24 +3,16 @@
     <label for="exampleFormControlSelect1">Example select</label>
     <select class="form-control" id="exampleFormControlSelect1">
       <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
     </select>
   </div>
   <div class="form-group">
-    <label for="exampleFormControlSelect1">Example select</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
+    <label for="exampleFormControlSelect1" >MATERIAS</label>
+    <select class="form-control"  (change)='HelloCorp($event)' >
+      <option *ngFor="let materia of materias" >{{materia.materia}}</option>
     </select>
   </div>
 </form>
-
+<h1>asdfasdfas {{selectMateria}}</h1>
 <div class="container">
     <div class="row">
       <div class="col">
