--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,14 @@
 
   <div class="container">
+    <div *ngIf="Logeado" style="text-align:center">
+
+
+      <h1>
+        Welcome to {{_email}}!
+      </h1>
+      <button type="button" (click)='logout()' class="btn btn-primary">Salir</button>
+
+    </div>
   <table class="table">
 
   <thead>
@@ -40,4 +49,5 @@
       </div>
   </tbody>
 </table>
+
 </div>
