--- a/src/app/components/editar-clase/editar-clase.component.html
+++ b/src/app/components/editar-clase/editar-clase.component.html
@@ -1,3 +1,12 @@
+<div *ngIf="Logeado" style="text-align:center">
+
+
+  <h1>
+    Welcome to {{_email}}!
+  </h1>
+  <button type="button" (click)='logout()' class="btn btn-primary">Salir</button>
+
+</div>
 <form>
   <div class="form-group">
     <label for="exampleFormControlSelect1">Profesor</label>
